--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<link rel="stylesheet" href="https://cdn.datatables.net/2.1.2/css/dataTables.dataTables.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>  
+<script src="https://cdn.datatables.net/2.1.2/js/dataTables.js"></script>
+
+
+
 <h1>ncRNA</h1>
+<table id="example"></table>
+  
+<script>
+  var data = [
+    [
+        "Tiger Nixon",
+        "System Architect",
+        "Edinburgh",
+        "5421",
+        "2011/04/25",
+        "$3,120"
+    ],
+    [
+        "Garrett Winters",
+        "Director",
+        "Edinburgh",
+        "8422",
+        "2011/07/25",
+        "$5,300"
+    ]
+]
+
+  $('#example').DataTable( {
+    data: data
+} );
+</script>
