--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <script src="https://cdn.datatables.net/2.1.2/js/dataTables.js"></script>
 
 
-
-<h1>ncRNA</h1>
-
-<table id="example" class="display" width="100%"></table>
   
-<script>
+<script type="text/javascript">
 var dataSet = [
     ['Tiger Nixon', 'System Architect', 'Edinburgh', '5421', '2011/04/25', '$320,800'],
     ['Garrett Winters', 'Accountant', 'Tokyo', '8422', '2011/07/25', '$170,750'],
@@ -60,3 +56,11 @@ new DataTable('#example', {
     data: dataSet
 });
 </script>
+
+
+
+<h1>ncRNA</h1>
+
+<table id="example" class="display" width="100%"></table>
+
+
