--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.2/css/dataTables.dataTables.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>  
 <script src="https://cdn.datatables.net/2.1.2/js/dataTables.js"></script>
 
@@ -59,8 +61,12 @@ new DataTable('#example', {
 
 
 
-<h1>ncRNA</h1>
+<div class="container">
+  
+  <h1>ncRNA</h1>
+  <table id="example" class="display" width="100%"></table>
+</div>
 
-<table id="example" class="display" width="100%"></table>
+
 
 
