--- a/index.html
+++ b/index.html
@@ -3,32 +3,54 @@
 <head>
 <title>Gene Data Table</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+<style>
+    header {
+        background-color: #f0f0f0;
+        padding: 20px;
+        text-align: center;
+    }
+
+    #tableContainer {
+        padding: 20px;
+    }
+
+    /* Adjust table width */
+    #geneDataTable {
+        width: 80%; /* Or set a specific pixel value, like 'width: 800px;' */
+        margin: 0 auto; /* Center the table horizontally */
+    }
+</style>
 </head>
 <body>
 
-<table id="geneDataTable" class="display">
-    <thead>
-        <tr>
-            <th>Gene Symbol</th>
-            <th>Panel Name</th>
-            <th>Mode of Inheritance</th>
-            <th>Penetrance</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+<header>
+    <h1>Gene Data Table</h1>
+</header>
+
+<div id="tableContainer">
+    <table id="geneDataTable" class="display">
+        <thead>
+            <tr>
+                <th>Gene Symbol</th>
+                <th>Panel Name</th>
+                <th>Mode of Inheritance</th>
+                <th>Penetrance</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 <script>
 $(document).ready(function () {
-    // Assuming 'gene_data.json' is in the same directory as your HTML file
     $.getJSON('gene_data.json', function(data) {
         $('#geneDataTable').DataTable({
-            data: data, // Use the JSON data directly
+            data: data,
             columns: [
-                { data: 'gene_symbol' }, // Adjust these based on your JSON structure
+                { data: 'gene_symbol' },
                 { data: 'panel_name' },
                 { data: 'mode_of_inheritance' },
                 { data: 'penetrance' }
