--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     }
     
     tfoot input {
+        display: table-row-group;
         width: 100%;
         padding: 3px;
         box-sizing: border-box;
